syntax = "proto3";
package p2pft.proto;

message FileInfo
{
    string name = 1;
    uint64 size = 2; // in KB
}

message FileTransferProposalReq
{
    repeated FileInfo files = 1;
}
