syntax = "proto3";
package p2pft;

enum Result
{
    ACCEPTED = 0;
    REJECTED = 1;
}